# dynatrace-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/dynatrace_log_tui/: api_client.py  data.py  main.py  modals.py  models.py  query_manager.py  ui_components.py
